Checkout repo in deploy job
I thought that making the deploy job depend on the test job
would mean that it would have access to the same storage,
but that doesn't appear to be the case.

Oh well, we'll check out the code in the second job as well then.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,6 +30,7 @@ jobs:
     needs: test
     if: github.ref == 'refs/heads/master'
     steps:
+      - uses: actions/checkout@v2
       - run: yarn build
       - uses: jakejarvis/s3-sync-action@v0.5.1
         with:
